# cvbot

./: .env.example  .gitignore  LICENSE.md  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
app/: config.py  database.py  main.py  models.py
app/routers/: candidates.py  chat.py  contact.py  conversations.py  costs.py  job_fit.py  work_experience.py
app/services/: candidate_loader.py  contact_email.py  cost_tracker.py  llm.py
app/static/css/: style.css
app/static/js/: chat.js  costs.js  job_fit.js  theme.js  work_experience.js
app/templates/: base.html  base.html.j2  chat.html  chat.html.j2  contact.html.j2  costs.html  costs.html.j2  job_fit.html  job_fit.html.j2  work_experience.html  work_experience.html.j2
config/: config-dev.yaml
data/candidates/: phil_tillman.json
plans/: CVbot prompt.md  job_fit_feature.md  technical_plan.md
tests/playwright/: conftest.py  test_android_input_visibility.py  test_work_experience_editable_fields.py  test_work_experience_population.py
tests/unit/: conftest.py  test_candidate_loader_db_work_experience.py  test_contact_spam_protection.py  test_phil_tillman_schema.py  test_work_experience_editor.py  test_work_experience_serialization.py
